--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,8 @@
 <div class="content" role="main">
 
-    <mat-grid-list rowHeight="30px" >
-      <mat-grid-tile>
-          <p>Steve{{ title }}</p>
-        </mat-grid-tile>
-    </mat-grid-list>
-
-  <mat-grid-list cols="2" rowHeight="30px" [style.background]="'skyblue'">
-    <mat-grid-tile>
-      <button mat-raised-button style="background-color: greenyellow;">True</button>
-    </mat-grid-tile>
-    <mat-grid-tile>
-      <button mat-raised-button style="background-color: red;color: White;">False</button>
-    </mat-grid-tile>
-  </mat-grid-list>
-
-
-  <div class="example-button-row">
-    <button mat-raised-button style="background-color: greenyellow;">True</button>
-    <button mat-raised-button style="background-color: red;color: White;">False</button>
-  </div>
+    <div>{{header}}</div>
+    <router-outlet></router-outlet>
+    <div>{{footer}}</div>
 
 </div>
 
-
-<router-outlet></router-outlet>
