ready to render question

--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -1,4 +1,7 @@
 <div>
+    {{current.question}}
+</div>
+<div>
     <button mat-raised-button style="background-color: greenyellow;">True</button>
     <button mat-raised-button style="background-color: red;color: White;">False</button>
 </div>
