--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -2,8 +2,8 @@
     {{current.question}}
 </div>
 <div>
-    <button mat-raised-button style="background-color: greenyellow;">True</button>
-    <button mat-raised-button style="background-color: red;color: White;">False</button>
+    <button (click)="doPostTrue()" mat-raised-button style="background-color: greenyellow;">True</button>
+    <button (click)="doPostFalse()" mat-raised-button style="background-color: red;color: White;">False</button>
 </div>
 
 <button [routerLink]="['/login']" mat-raised-button style="background-color: grey;color: White;">Finish</button>
