better post nav

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="content" role="main">
 
-    <div>{{header}}</div>
+    <app-header></app-header>
     <router-outlet></router-outlet>
-    <div>{{footer}}</div>
+    <app-footer>{{footer}}</app-footer>
 
 </div>
 
