--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -1,3 +1,9 @@
+<mat-card>
+    <mat-card-title>
+        Question No. {{current.id}}
+    </mat-card-title>
+</mat-card>
+
 <div>
     {{current.question}}
 </div>
