--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,6 @@
-<div class="content" role="main">
 
     <app-header></app-header>
     <router-outlet></router-outlet>
-    <app-footer>{{footer}}</app-footer>
+    <app-footer></app-footer>
 
-</div>
 
