--- a/src/app/question/question.component.css
+++ b/src/app/question/question.component.css
@@ -1,16 +1,15 @@
 .buttonTrue {
     background-color: greenyellow;
     color: black;
-    margin-left: 0px;
-    margin-right: 20px;
+
+    margin-right: 30px !important;
 }
 
 .buttonFalse {
     background-color: red;
     color: white;
 
-    margin-left: 20px;
-    margin-right: 0px;
+    margin-left: 30px !important;
 }
 
 .buttonExit {
